fix overflow

--- a/src/Components/resetPassword/ResetPassword.module.css
+++ b/src/Components/resetPassword/ResetPassword.module.css
@@ -11,8 +11,6 @@
 
 .authImageSection {
   display: block;
-  background-color: #ffffff;
-  padding: 0 1.25rem;
   height: 100vh;
   overflow: hidden;
 }
@@ -80,7 +78,7 @@
   background-color: #ffffff;
   padding: 0 0.25rem;
   font-size: 0.75rem;
-  color: #202425;
+  color: #202525;
   font-weight: 500;
 }
 
